tests/js/success/cfg_iterator1.js
/*******************************************************************************
    Copyright (c) 2012, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ***************************************************************************** */
var obj = {};
for (x in obj) {
  obj[x] = 1;
}
